# rusty_web_app

./: .env  Cargo.toml  README.md  docker-compose.yml
MDNotes/: HTTP.md  README.md  WebsocketScratchpad.md
migrations/2020-07-17-185928_create_events/: up.sql
migrations/2020-07-18-153902_create_user/: down.sql  up.sql
migrations/2020-07-19-035908_update_events/: up.sql
src/: config.rs  handles.rs  main.rs  models.rs  schema.rs  wsocket.rs
src/queries/: latest_events_by_user.sql
