[package]
name = "stream_event_viewer"
version = "0.1.0"
authors = ["karamel <kivo360@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# features = [""]
[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
serde={version="1.0.114", features=["derive"]}
config = "0.10.1"
dotenv="0.15.0"
diesel = { version = "1.4.5", features = ["postgres","uuidv07", "r2d2", "chrono"] }
chrono = { version="0.4.13", features = ["serde"]}
slog = "2.5.2"
serde_json="1.0.56"
r2d2 = "0.8.9"
futures = "0.3.5"
lazy_static="1.4.0"
rand = "0.7.3"
fake = { version = "2.2", features=['derive']}
tungstenite="0.11.0"
actix-identity="0.2.1"
actix-cors="0.2.0"